// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

generator client {
  provider = "prisma-client-js"
}

generator custom_generator {
  provider = "prisma-generator-fake-data"
}
generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
  directUrl = env("DIRECT_URL")
}

enum UserRole {
  OWNER
  WORKER
  UNKNOW
}

enum CatProduct {
  ELECTRO
  DRINK
  FOOD
  FASHION
}

model User {
  id            String    @id @default(cuid())
  name          String
  username      String
  email         String?   @unique
  emailVerified DateTime?
  image         String?
  password      String?
  role          UserRole  @default(UNKNOW)
}

model ProductStock {
  id           String     @id @unique
  name         String
  imageProduct String?
  price        Float
  stock        Float
  cat          CatProduct

  Product Product[]
}

model Product {
  id            String          @id @default(cuid())
  productId     String
  productstock  ProductStock    @relation(fields: [productId], references: [id], onDelete: Cascade, onUpdate: Cascade)
  sellprice     Float
  OnSaleProduct OnSaleProduct[]

  @@unique([productId])
}

model OnSaleProduct {
  id            String      @id @default(cuid())
  productId     String
  quantity      Int
  saledate      DateTime    @default(now())
  transactionId String
  product       Product     @relation(fields: [productId], references: [productId], onDelete: Cascade, onUpdate: Cascade)
  transaction   Transaction @relation(fields: [transactionId], references: [id], onDelete: Cascade)

  @@index([productId, transactionId])
}

model Transaction {
  id          String          @id @default(cuid())
  totalAmount String?
  createdAt   DateTime        @default(now())
  isComplete  Boolean         @default(false)
  products    OnSaleProduct[]
}

model CustomTransaction {
  id          String             @id @default(cuid())
  totalAmount String
  cashierName String
  serviceType String
  customerName String
  arrival String?
  departure String?
  createdAt   DateTime           @default(now())
  isComplete  Boolean            @default(false)
  items       CustomOrderItem[]
}

model CustomOrderItem {
  id                  String            @id @default(cuid())
  itemName           String
  price              Float
  quantity           Int
  createdAt          DateTime          @default(now())
  customTransactionId String
  customTransaction   CustomTransaction @relation(fields: [customTransactionId], references: [id], onDelete: Cascade)

  @@index([customTransactionId])
}

model ShopData {
  id          String          @id @default(cuid())
  tax Int?
  name String?
}

