//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  name String [not null]
  username String [not null]
  email String [unique]
  emailVerified DateTime
  image String
  password String
  role UserRole [not null, default: 'UNKNOW']
}

Table ProductStock {
  id String [pk]
  name String [not null]
  imageProduct String
  price Float [not null]
  stock Float [not null]
  cat CatProduct [not null]
  Product Product [not null]
}

Table Product {
  id String [pk]
  productId String [unique, not null]
  productstock ProductStock [not null]
  sellprice Float [not null]
  OnSaleProduct OnSaleProduct [not null]
}

Table OnSaleProduct {
  id String [pk]
  productId String [not null]
  quantity Int [not null]
  saledate DateTime [default: `now()`, not null]
  transactionId String [not null]
  product Product [not null]
  transaction Transaction [not null]
}

Table Transaction {
  id String [pk]
  totalAmount String
  createdAt DateTime [default: `now()`, not null]
  isComplete Boolean [not null, default: false]
  products OnSaleProduct [not null]
}

Table CustomTransaction {
  id String [pk]
  totalAmount String [not null]
  cashierName String [not null]
  serviceType String [not null]
  customerName String [not null]
  arrival String
  departure String
  createdAt DateTime [default: `now()`, not null]
  isComplete Boolean [not null, default: false]
  items CustomOrderItem [not null]
}

Table CustomOrderItem {
  id String [pk]
  itemName String [not null]
  price Float [not null]
  quantity Int [not null]
  createdAt DateTime [default: `now()`, not null]
  customTransactionId String [not null]
  customTransaction CustomTransaction [not null]
}

Table ShopData {
  id String [pk]
  tax Int
  name String
}

Enum UserRole {
  OWNER
  WORKER
  UNKNOW
}

Enum CatProduct {
  ELECTRO
  DRINK
  FOOD
  FASHION
}

Ref: Product.productId > ProductStock.id [delete: Cascade]

Ref: OnSaleProduct.productId > Product.productId [delete: Cascade]

Ref: OnSaleProduct.transactionId > Transaction.id [delete: Cascade]

Ref: CustomOrderItem.customTransactionId > CustomTransaction.id [delete: Cascade]